# bait-print-agent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.claude/: CONTRACT-2026-05-21-prints-rework.md
.github/workflows/: release.yml
companion/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
companion/.claude/: launch.json
companion/scripts/: generate-icons.mjs
companion/src/: App.tsx  index.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: lib.rs  main.rs
companion/src/components/: ActionsTab.tsx  AppFooter.tsx  AppHeader.tsx  RecentJobsTab.tsx  StatusDot.tsx  StatusTab.tsx
companion/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  tabs.tsx  toast.tsx  toaster.tsx  tooltip.tsx
companion/src/hooks/: use-agent-status.ts  use-toast.ts
companion/src/lib/: api.ts  mappers.ts  mock-data.ts  updater.ts  utils.ts
scripts/: bait-print-agent.iss  package-win.js
src/: auto-update.ts  config.ts  constants.ts  heartbeat.ts  index.ts  install-service.ts  logger.ts  persistent-config.ts  realtime.ts  retry-scheduler.ts  setup.ts  supabase.ts  types.ts  update-checker.ts
src/local-api/: handlers.ts  server.ts
src/printers/: discover.ts  escpos-capture.ts  escpos-decoder.test.ts  escpos-decoder.ts  escpos-transport.test.ts  escpos-transport.ts  registry.ts  win-raw-print.ts
src/renderer/: console.ts  dispatcher.ts  escpos-layouts.ts  format.ts  logo-cache.test.ts  logo-cache.ts  usb.ts  virtual.ts
src/types/: print-options.ts
