[package]
name = "bait-print-companion"
version = "0.6.4"
description = "bAIt Print Companion — tray + ventana flotante del agente de impresión"
authors = ["bAIt <hola@bait.cl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bait_print_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2"
tauri-plugin-process = "2.2"
# Single-instance: si arranca un 2do .exe del companion, le hace focus al
# 1ro y se mata solo. Sin esto el cliente termina con varios tray icons.
tauri-plugin-single-instance = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
# dirs: para resolver el home del user de forma cross-platform. Lo usamos
# en `read_local_api_token` para leer ~/.bait-print-agent/config.json sin
# tener que depender de %USERPROFILE% en el cliente del companion.
# Respetamos override via env var BAIT_AGENT_HOME para dev local.
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
